sites and sidebar

--- a/src/assets/style/cmps/_Landing.scss
+++ b/src/assets/style/cmps/_Landing.scss
@@ -16,6 +16,7 @@
     #tsparticles {
         position: absolute;
         width: 100%;
+        left: 0;
         height: 100%;
         canvas {
             position: relative !important;
